testsuite/vhdl/syntax/test_data/label_mismatch/002_entity.expected
In 'label_mismatch/002_entity':4:1: syntax error: Label mismatch in Entity Declaration
   4| entity testbench is
    |        ~~~~~~~~~ <<-- here
    | ...
   5| end entity test_bench;
    |            ~~~~~~~~~~ <<-- and here
